tests/NormalTests/paczka2/big_fuzzy/97111395.err
Error in line 4: A824 S664 78,7
Error in line 13: A824 A180 26,2
Error in line 1: qbpn A180 31,5
Error in line 22: pPDoZP A180 60,1
Error in line 24: A824 A824 65,2
Error in line 27: A824 S664 75,0
Error in line 30: pPDoZP S664 183,3
Error in line 36: pPDoZP A824 66,6
Error in line 47: qbpn A180 68,7
Error in line 41: Phpb A180 71,2
Error in line 44: DIA3g A322 59,9
Error in line 57: pPDoZP S664 25,2
Error in line 70: p4XhuYLPU S664 62,4
Error in line 82: p4XhuYLPU A322 127,94
Error in line 83: p4XhuYLPU A322 82,19
Error in line 75: pPDoZP S664 92,1
Error in line 85: pPDoZP A180 29,1
Error in line 88: pPDoZP A824 16,8
Error in line 89: p4XhuYLPU S664 87,3
Error in line 95: p4XhuYLPU A180 79,6
Error in line 96: qbpn A322 69,0
Error in line 101: DIA3g S664 47,9
Error in line 117: DIA3g A322 26,8
Error in line 114: p4XhuYLPU A180 6,8
Error in line 122: p4XhuYLPU A322 42,5
Error in line 124: A824 A180 67,8
Error in line 134: A824 S664 31,8
Error in line 133: qbpn A180 144,6
Error in line 138: qbpn A322 230,8
Error in line 141: DIA3g S664 68,4
Error in line 135: p4XhuYLPU A824 57,9
Error in line 142: qbpn S664 51,9
Error in line 140: pPDoZP A322 224,1
Error in line 153: 3aD0x A180 34,0
Error in line 151: A824 A824 34,6
Error in line 166: DIA3g A824 69,0
Error in line 172: DIA3g S664 29,09
Error in line 164: A824 S664 30,1
Error in line 174: p4XhuYLPU A322 34,0
Error in line 173: A824 A180 25,8
Error in line 167: DIA3g S664 9,3
Error in line 180: DIA3g A824 61,7
Error in line 182: qbpn A824 77,4
Error in line 175: p4XhuYLPU A180 13,2
Error in line 163: pPDoZP S664 106,9
Error in line 193: pPDoZP A322 84,1
Error in line 202: qbp* S664 45,5
Error in line 203: 3aD0x S664 45,3
Error in line 211: DIA3g A322 18,4
Error in line 214: qbpn A322 20,4
Error in line 217: qbpn A180 30,0
Error in line 199: Phpb A180 99,0
Error in line 220: p4XhuYLPU A824 34,2
Error in line 229: p4XhuYLPU S664 3,3
Error in line 236: p4XhuYLPU A180 35,6
Error in line 234: pPDoZP A322 15,0
Error in line 242: qbpn A180 33,7
